# Intermediate-School-System-OOP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  student_sample.txt
Utils/: absences_panel.cpp  absences_panel.hpp  account_final_create.cpp  account_final_create.hpp  balance_panel.cpp  balance_panel.hpp  create_account.cpp  create_account.hpp  english_test.cpp  english_test.hpp  first_page.cpp  first_page.hpp  iq_test.cpp  iq_test.hpp  load_user_data.cpp  load_user_data.hpp  management.cpp  management.hpp  scholarship.cpp  scholarship.hpp  sign_in.cpp  sign_in.hpp  student.cpp  student.hpp  student_card.cpp  student_card.hpp  subject_panel.cpp  subject_panel.hpp
